# manipulation_project

./: README.md
detection_interfaces/: CMakeLists.txt  README.md  package.xml
moveit2_scripts/: CMakeLists.txt  README.md  package.xml
moveit2_scripts/launch/: cartesian_move.launch.py  gripper_control.launch.py  move_joints.launch.py  move_to_pose.launch.py  pick_and_place.launch.py  pick_and_place_perception.launch.py  pick_and_place_perception_real.launch.py  pick_and_place_real.launch.py
moveit2_scripts/src/: add_ur3_sim_scene.cpp  cartesian_move.cpp  gripper_control.cpp  move_joints.cpp  move_to_pose.cpp  pick_and_place.cpp  pick_and_place_perception.cpp  pick_and_place_perception_real.cpp  pick_and_place_real.cpp
my_moveit_config/: .setup_assistant  README.md  package.xml
my_moveit_config/config/: name.srdf
my_moveit_config/launch/: move_group.launch.py
object_detection/: README.md  package.xml  setup.py
object_detection/launch/: object_detection.launch.py  object_detection_real.launch.py
object_detection/object_detection/: object_detection.py  static_transform_publisher.py
object_detection/rviz/: object_detection.rviz  object_detection_real.rviz
real_moveit_config/: .setup_assistant  README.md  package.xml
real_moveit_config/config/: name.srdf  ros2_controllers.yaml
real_moveit_config/launch/: move_group.launch.py
