<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>moveit2_scripts</name>
  <version>0.0.0</version>
  <description>MoveIt2 Scripts for UR3E manipulation</description>
  <maintainer email="dmitri.manajev@protonmail.com">Dmitri Manajev</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_action</depend>
  <depend>moveit_core</depend>
  <depend>moveit_ros_planning</depend>
  <depend>moveit_ros_planning_interface</depend>
  <depend>interactive_markers</depend>
  <depend>geometric_shapes</depend>
  <depend>control_msgs</depend>
  <depend>moveit_msgs</depend>
  <depend>detection_interfaces</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
